--- a/src/components/GameListPage/style.module.scss
+++ b/src/components/GameListPage/style.module.scss
@@ -5,13 +5,14 @@
   flex-direction: row;
   justify-content: stretch;
   align-items: stretch;
-}
 
-.game-list {
-  width: 250px;
-  padding: 10px;
-  background: #f2f2f2;
-  border-right: 1px solid #e5e5e5;
-  display: flex;
-  flex-direction: column;
+  .game-list {
+    width: 250px;
+    background: #fff;
+    border-right: 1px solid rgba(0, 0, 0, 0.12);
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    overflow-y: auto;
+  }
 }
