--- a/src/components/GameLobbyPage/style.module.css
+++ b/src/components/GameLobbyPage/style.module.css
@@ -1,8 +1,11 @@
 .container {
   width: 100%;
-  padding: 20px;
-  background: #e5e5e5;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  overflow-y: auto;
+}
+
+.container::-webkit-scrollbar {
+  display: none;
 }
