--- a/src/components/common/Game/GameInfo/style.module.scss
+++ b/src/components/common/Game/GameInfo/style.module.scss
@@ -1,15 +1,14 @@
 .game-info {
-  width: 300px;
+  width: 100%;
+  height: 100%;
   padding: 10px;
-  flex-grow: 0;
-  flex-shrink: 0;
-  background: #999;
+  flex: 0 0;
 
   .row {
     min-height: 40px;
     padding: 8px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: stretch;
     align-items: center;
     font-size: 30px;
   }
